# gridentify-bots

./: Cargo.toml  README.md
src/: gridentify.rs  main.rs
src/players/: greedy.rs  mod.rs  most_followup.rs  random.rs
