[package]
name = "gridentify-bots"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.3.3"
rand = "0.8.5"
rand_chacha = "0.3.1"
serde_json = "1.0.96"
skillratings = { version = "0.25.0", features = ["serde"] }
